--- a/Lab01/notebook/emprestimo01.ipynb
+++ b/Lab01/notebook/emprestimo01.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
      "output_type": "stream",
      "text": [
       "As parcelas do financiamento:\n",
-      "200.00; 202.00; 204.02; 206.06; 208.12; \n"
+      "200.00; 202.00; 202.00; 204.02; 204.02; 206.06; 206.06; 208.12; 208.12; 210.20; \n"
      ]
     }
    ],
@@ -67,7 +67,7 @@
     "    printf(\"As parcelas do financiamento:\\n\");\n",
     "\n",
     "    \n",
-    "    for (int i = 1; i =< N; i++){\n",
+    "    for (int i = 1; i <= N; i++){\n",
     "        printf(\"%.2f; \", S);\n",
     "        float S_novo = S * (1 + J);;\n",
     "        printf(\"%.2f; \", S_novo);\n",
@@ -88,15 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-4d8e77a5ed82>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-4d8e77a5ed82>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    float nova_parcela(int *i, int N, float S, float J, float *p){\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "As parcelas do financiamento:\n",
+      "200.00; 202.00; 204.02; 206.06; 208.12; "
      ]
     }
    ],
@@ -159,15 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-1bb7407917db>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-1bb7407917db>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    float NovaParcela(float s_anterior, float J){\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "As parcelas do financiamento:\n",
+      "200.00; 202.00; 204.02; 206.06; 208.12; \n"
      ]
     }
    ],
@@ -175,9 +175,9 @@
     "#include <stdio.h>\n",
     "#include <math.h> \n",
     "\n",
-    "loat nova_parcela(float s, float j, int i){\n",
-    "    *p = s * pow((1 + j), i);\n",
-    "    return *p;\n",
+    "float nova_parcela(float p_atual, float j, int i){\n",
+    "    p_atual = p_atual * (1 + j) ;\n",
+    "    return p_atual;\n",
     "\n",
     "}\n",
     "\n",
@@ -185,10 +185,10 @@
     "    printf(\"As parcelas do financiamento:\\n\");\n",
     "    \n",
     "    float p = s;\n",
-    "\n",
-    "    for (int i = 0; i < N; i++){\n",
+    "    printf(\"%.2f; \", p);\n",
+    "    for (int i = 1; i < n; i++){\n",
     "        \n",
-    "        float *p = nova_parcela(s, j, i);\n",
+    "        p = nova_parcela(p, j, i);\n",
     "        printf(\"%.2f; \", p);\n",
     "        \n",
     "    }\n",
@@ -204,7 +204,7 @@
     "    //juros mensais em %\n",
     "    float J = 0.01;\n",
     "\n",
-    "    calcular_parcelas();\n",
+    "    calcular_parcelas(S, N, J);\n",
     "\n",
     "    return 0;\n",
     "}"
@@ -221,15 +221,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-5a867ea2832b>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-5a867ea2832b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    typedef struct{\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/tmpjglgwkx3.c: In function ‘proxima_parcela’:\n",
+      "/tmp/tmpjglgwkx3.c:11:6: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
+      "     e->p_atual = e->p_atual * (1 + e->j);\n",
+      "      ^~\n",
+      "/tmp/tmpjglgwkx3.c:11:19: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
+      "     e->p_atual = e->p_atual * (1 + e->j);\n",
+      "                   ^~\n",
+      "/tmp/tmpjglgwkx3.c:11:37: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
+      "     e->p_atual = e->p_atual * (1 + e->j);\n",
+      "                                     ^~\n",
+      "/tmp/tmpjglgwkx3.c: In function ‘calcular_parcelas’:\n",
+      "/tmp/tmpjglgwkx3.c:17:12: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
+      "     while(e->i < e->n){\n",
+      "            ^~\n",
+      "/tmp/tmpjglgwkx3.c:17:19: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
+      "     while(e->i < e->n){\n",
+      "                   ^~\n",
+      "/tmp/tmpjglgwkx3.c:18:13: warning: implicit declaration of function ‘proxima_pacela’; did you mean ‘proxima_parcela’? [-Wimplicit-function-declaration]\n",
+      "         e = proxima_pacela(e);\n",
+      "             ^~~~~~~~~~~~~~\n",
+      "             proxima_parcela\n",
+      "/tmp/tmpjglgwkx3.c:18:11: error: incompatible types when assigning to type ‘Emprestimo {aka struct <anonymous>}’ from type ‘int’\n",
+      "         e = proxima_pacela(e);\n",
+      "           ^\n",
+      "/tmp/tmpjglgwkx3.c:19:25: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
+      "         printf(\"%.2f\", e->p_atual);\n",
+      "                         ^~\n",
+      "/tmp/tmpjglgwkx3.c: In function ‘main’:\n",
+      "/tmp/tmpjglgwkx3.c:25:16: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
+      "     emprestimo1->n = 5;\n",
+      "                ^~\n",
+      "/tmp/tmpjglgwkx3.c:26:16: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
+      "     emprestimo1->s = 200;\n",
+      "                ^~\n",
+      "/tmp/tmpjglgwkx3.c:27:5: error: ‘emprestimo’ undeclared (first use in this function); did you mean ‘emprestimo1’?\n",
+      "     emprestimo->j = 0.01;\n",
+      "     ^~~~~~~~~~\n",
+      "     emprestimo1\n",
+      "/tmp/tmpjglgwkx3.c:27:5: note: each undeclared identifier is reported only once for each function it appears in\n",
+      "[C kernel] GCC exited with code 1, the executable will not be executed"
      ]
     }
    ],
@@ -308,15 +346,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-11b570d6e82f>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-11b570d6e82f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    **()\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/tmpibddubrd.c: In function ‘criar_lista’:\n",
+      "/tmp/tmpibddubrd.c:22:12: error: ‘NULL’ undeclared (first use in this function)\n",
+      "     return NULL;\n",
+      "            ^~~~\n",
+      "/tmp/tmpibddubrd.c:22:12: note: each undeclared identifier is reported only once for each function it appears in\n",
+      "/tmp/tmpibddubrd.c: In function ‘adicionar_emprestimo’:\n",
+      "/tmp/tmpibddubrd.c:33:24: error: ‘NULL’ undeclared (first use in this function)\n",
+      "     if(lista_antiga != NULL){\n",
+      "                        ^~~~\n",
+      "/tmp/tmpibddubrd.c:34:16: error: dereferencing pointer to incomplete type ‘struct No’\n",
+      "        emp_novo->prox = lista_antiga; //a lista antiga é o próximo nó\n",
+      "                ^~\n",
+      "/tmp/tmpibddubrd.c: In function ‘criar_emprestimo’:\n",
+      "/tmp/tmpibddubrd.c:40:22: warning: implicit declaration of function ‘malloc’ [-Wimplicit-function-declaration]\n",
+      "     p_emp emp_novo = malloc(sizeof(Emprestimo));\n",
+      "                      ^~~~~~\n",
+      "/tmp/tmpibddubrd.c:40:22: warning: incompatible implicit declaration of built-in function ‘malloc’\n",
+      "/tmp/tmpibddubrd.c:40:22: note: include ‘<stdlib.h>’ or provide a declaration of ‘malloc’\n",
+      "/tmp/tmpibddubrd.c:43:5: error: ‘emp’ undeclared (first use in this function); did you mean ‘p_emp’?\n",
+      "     emp->novo->s = s;\n",
+      "     ^~~\n",
+      "     p_emp\n",
+      "/tmp/tmpibddubrd.c:46:22: error: ‘NULL’ undeclared (first use in this function)\n",
+      "     emp_novo->prox = NULL;\n",
+      "                      ^~~~\n",
+      "/tmp/tmpibddubrd.c: In function ‘proxima_parcela’:\n",
+      "/tmp/tmpibddubrd.c:53:6: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct Emprestimo}’)\n",
+      "     e->p_atual = e->p_atual * (1 + e->j);\n",
+      "      ^~\n",
+      "/tmp/tmpibddubrd.c:53:19: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct Emprestimo}’)\n",
+      "     e->p_atual = e->p_atual * (1 + e->j);\n",
+      "                   ^~\n",
+      "/tmp/tmpibddubrd.c:53:37: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct Emprestimo}’)\n",
+      "     e->p_atual = e->p_atual * (1 + e->j);\n",
+      "                                     ^~\n",
+      "/tmp/tmpibddubrd.c:54:12: error: incompatible types when returning type ‘Emprestimo {aka struct Emprestimo}’ but ‘float’ was expected\n",
+      "     return e;\n",
+      "            ^\n",
+      "/tmp/tmpibddubrd.c: In function ‘calcular_parcelas’:\n",
+      "/tmp/tmpibddubrd.c:59:18: error: expected expression before ‘<’ token\n",
+      "         if(e->i =< e->n){\n",
+      "                  ^\n",
+      "/tmp/tmpibddubrd.c:60:42: error: incompatible type for argument 1 of ‘proxima_parcela’\n",
+      "             e->p_atual = proxima_parcela(e);\n",
+      "                                          ^\n",
+      "/tmp/tmpibddubrd.c:50:7: note: expected ‘Emprestimo {aka struct Emprestimo}’ but argument is of type ‘p_emp {aka struct No *}’\n",
+      " float proxima_parcela(Emprestimo e){\n",
+      "       ^~~~~~~~~~~~~~~\n",
+      "/tmp/tmpibddubrd.c:61:13: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]\n",
+      "             printf(\"%.2f\", e->p_atual);\n",
+      "             ^~~~~~\n",
+      "/tmp/tmpibddubrd.c:61:13: warning: incompatible implicit declaration of built-in function ‘printf’\n",
+      "/tmp/tmpibddubrd.c:61:13: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’\n",
+      "/tmp/tmpibddubrd.c:64:23: error: ‘NULL’ undeclared (first use in this function)\n",
+      "     }while(e->prox != NULL);\n",
+      "                       ^~~~\n",
+      "/tmp/tmpibddubrd.c: In function ‘main’:\n",
+      "/tmp/tmpibddubrd.c:70:16: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]\n",
+      "     p_emp e2 = criar_emprestimo\n",
+      "                ^~~~~~~~~~~~~~~~\n",
+      "/tmp/tmpibddubrd.c:72:5: error: expected ‘,’ or ‘;’ before ‘lista_emprestimos’\n",
+      "     lista_emprestimos = adicionar_emprestimo(e1);\n",
+      "     ^~~~~~~~~~~~~~~~~\n",
+      "/tmp/tmpibddubrd.c:73:25: error: too few arguments to function ‘adicionar_emprestimo’\n",
+      "     lista_emprestimos = adicionar_emprestimo(e2);\n",
+      "                         ^~~~~~~~~~~~~~~~~~~~\n",
+      "/tmp/tmpibddubrd.c:30:7: note: declared here\n",
+      " p_emp adicionar_emprestimo(p_emp lista_antiga, p_emp emp_novo)\n",
+      "       ^~~~~~~~~~~~~~~~~~~~\n",
+      "[C kernel] GCC exited with code 1, the executable will not be executed"
      ]
     }
    ],
@@ -360,7 +466,7 @@
     "}\n",
     "\n",
     "p_emp criar_emprestimo(int n, float s, float j){\n",
-    "    emp_novo = malloc(sizeof(Emprestimo));\n",
+    "    p_emp emp_novo = malloc(sizeof(Emprestimo));\n",
     "    emp_novo->i = 0;\n",
     "    emp_novo->n = n;\n",
     "    emp->novo->s = s;\n",
@@ -412,21 +518,14 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
-   "language": "python",
-   "name": "python38564bitedd1c4db7a9347fcaa59a8245afe37ce"
+   "display_name": "C",
+   "language": "c",
+   "name": "c"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "file_extension": ".c",
+   "mimetype": "text/plain",
+   "name": "c"
   }
  },
  "nbformat": 4,
