--- a/Lab01/notebook/emprestimo01.ipynb
+++ b/Lab01/notebook/emprestimo01.ipynb
@@ -221,60 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/tmpjglgwkx3.c: In function ‘proxima_parcela’:\n",
-      "/tmp/tmpjglgwkx3.c:11:6: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
-      "     e->p_atual = e->p_atual * (1 + e->j);\n",
-      "      ^~\n",
-      "/tmp/tmpjglgwkx3.c:11:19: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
-      "     e->p_atual = e->p_atual * (1 + e->j);\n",
-      "                   ^~\n",
-      "/tmp/tmpjglgwkx3.c:11:37: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
-      "     e->p_atual = e->p_atual * (1 + e->j);\n",
-      "                                     ^~\n",
-      "/tmp/tmpjglgwkx3.c: In function ‘calcular_parcelas’:\n",
-      "/tmp/tmpjglgwkx3.c:17:12: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
-      "     while(e->i < e->n){\n",
-      "            ^~\n",
-      "/tmp/tmpjglgwkx3.c:17:19: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
-      "     while(e->i < e->n){\n",
-      "                   ^~\n",
-      "/tmp/tmpjglgwkx3.c:18:13: warning: implicit declaration of function ‘proxima_pacela’; did you mean ‘proxima_parcela’? [-Wimplicit-function-declaration]\n",
-      "         e = proxima_pacela(e);\n",
-      "             ^~~~~~~~~~~~~~\n",
-      "             proxima_parcela\n",
-      "/tmp/tmpjglgwkx3.c:18:11: error: incompatible types when assigning to type ‘Emprestimo {aka struct <anonymous>}’ from type ‘int’\n",
-      "         e = proxima_pacela(e);\n",
-      "           ^\n",
-      "/tmp/tmpjglgwkx3.c:19:25: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
-      "         printf(\"%.2f\", e->p_atual);\n",
-      "                         ^~\n",
-      "/tmp/tmpjglgwkx3.c: In function ‘main’:\n",
-      "/tmp/tmpjglgwkx3.c:25:16: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
-      "     emprestimo1->n = 5;\n",
-      "                ^~\n",
-      "/tmp/tmpjglgwkx3.c:26:16: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct <anonymous>}’)\n",
-      "     emprestimo1->s = 200;\n",
-      "                ^~\n",
-      "/tmp/tmpjglgwkx3.c:27:5: error: ‘emprestimo’ undeclared (first use in this function); did you mean ‘emprestimo1’?\n",
-      "     emprestimo->j = 0.01;\n",
-      "     ^~~~~~~~~~\n",
-      "     emprestimo1\n",
-      "/tmp/tmpjglgwkx3.c:27:5: note: each undeclared identifier is reported only once for each function it appears in\n",
-      "[C kernel] GCC exited with code 1, the executable will not be executed"
+      "As parcelas do financiamento:\n",
+      "200.00 202.00 204.02 206.06 208.12 \n"
      ]
     }
    ],
    "source": [
     "#include <stdio.h>\n",
     "\n",
-    "typedef struct{\n",
+    "typedef struct Emprestimo{\n",
     "    int n, i;\n",
     "    float s, j, p_atual;\n",
     "\n",
@@ -282,23 +244,28 @@
     "\n",
     "Emprestimo proxima_parcela(Emprestimo e){\n",
     " \n",
-    "    e->p_atual = e->p_atual * (1 + e->j);\n",
+    "    if(e.i != 0){\n",
+    "            e.p_atual = e.p_atual * (1 + e.j);\n",
+    "    }\n",
+    "    e.i ++;\n",
     "    return e;\n",
     "}\n",
     "\n",
     "void calcular_parcelas(Emprestimo e){\n",
     "    printf(\"As parcelas do financiamento:\\n\");\n",
-    "    while(e->i < e->n){\n",
-    "        e = proxima_pacela(e);\n",
-    "        printf(\"%.2f\", e->p_atual);\n",
+    "    while(e.i < e.n){\n",
+    "        e = proxima_parcela(e);\n",
+    "        printf(\"%.2f \", e.p_atual);\n",
     "    }\n",
+    "    printf(\"\\n\");\n",
     "}\n",
     "\n",
     "int main(){\n",
     "    Emprestimo emprestimo1;\n",
-    "    emprestimo1->n = 5;\n",
-    "    emprestimo1->s = 200;\n",
-    "    emprestimo->j = 0.01;\n",
+    "    emprestimo1.n = 5;\n",
+    "    emprestimo1.s = emprestimo1.p_atual = 200;\n",
+    "    emprestimo1.j = 0.01;\n",
+    "    emprestimo1.i = 0;\n",
     "    \n",
     "    calcular_parcelas(emprestimo1);\n",
     "    return 0;\n",
@@ -346,87 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/tmpibddubrd.c: In function ‘criar_lista’:\n",
-      "/tmp/tmpibddubrd.c:22:12: error: ‘NULL’ undeclared (first use in this function)\n",
-      "     return NULL;\n",
-      "            ^~~~\n",
-      "/tmp/tmpibddubrd.c:22:12: note: each undeclared identifier is reported only once for each function it appears in\n",
-      "/tmp/tmpibddubrd.c: In function ‘adicionar_emprestimo’:\n",
-      "/tmp/tmpibddubrd.c:33:24: error: ‘NULL’ undeclared (first use in this function)\n",
-      "     if(lista_antiga != NULL){\n",
-      "                        ^~~~\n",
-      "/tmp/tmpibddubrd.c:34:16: error: dereferencing pointer to incomplete type ‘struct No’\n",
-      "        emp_novo->prox = lista_antiga; //a lista antiga é o próximo nó\n",
-      "                ^~\n",
-      "/tmp/tmpibddubrd.c: In function ‘criar_emprestimo’:\n",
-      "/tmp/tmpibddubrd.c:40:22: warning: implicit declaration of function ‘malloc’ [-Wimplicit-function-declaration]\n",
-      "     p_emp emp_novo = malloc(sizeof(Emprestimo));\n",
-      "                      ^~~~~~\n",
-      "/tmp/tmpibddubrd.c:40:22: warning: incompatible implicit declaration of built-in function ‘malloc’\n",
-      "/tmp/tmpibddubrd.c:40:22: note: include ‘<stdlib.h>’ or provide a declaration of ‘malloc’\n",
-      "/tmp/tmpibddubrd.c:43:5: error: ‘emp’ undeclared (first use in this function); did you mean ‘p_emp’?\n",
-      "     emp->novo->s = s;\n",
-      "     ^~~\n",
-      "     p_emp\n",
-      "/tmp/tmpibddubrd.c:46:22: error: ‘NULL’ undeclared (first use in this function)\n",
-      "     emp_novo->prox = NULL;\n",
-      "                      ^~~~\n",
-      "/tmp/tmpibddubrd.c: In function ‘proxima_parcela’:\n",
-      "/tmp/tmpibddubrd.c:53:6: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct Emprestimo}’)\n",
-      "     e->p_atual = e->p_atual * (1 + e->j);\n",
-      "      ^~\n",
-      "/tmp/tmpibddubrd.c:53:19: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct Emprestimo}’)\n",
-      "     e->p_atual = e->p_atual * (1 + e->j);\n",
-      "                   ^~\n",
-      "/tmp/tmpibddubrd.c:53:37: error: invalid type argument of ‘->’ (have ‘Emprestimo {aka struct Emprestimo}’)\n",
-      "     e->p_atual = e->p_atual * (1 + e->j);\n",
-      "                                     ^~\n",
-      "/tmp/tmpibddubrd.c:54:12: error: incompatible types when returning type ‘Emprestimo {aka struct Emprestimo}’ but ‘float’ was expected\n",
-      "     return e;\n",
-      "            ^\n",
-      "/tmp/tmpibddubrd.c: In function ‘calcular_parcelas’:\n",
-      "/tmp/tmpibddubrd.c:59:18: error: expected expression before ‘<’ token\n",
-      "         if(e->i =< e->n){\n",
-      "                  ^\n",
-      "/tmp/tmpibddubrd.c:60:42: error: incompatible type for argument 1 of ‘proxima_parcela’\n",
-      "             e->p_atual = proxima_parcela(e);\n",
-      "                                          ^\n",
-      "/tmp/tmpibddubrd.c:50:7: note: expected ‘Emprestimo {aka struct Emprestimo}’ but argument is of type ‘p_emp {aka struct No *}’\n",
-      " float proxima_parcela(Emprestimo e){\n",
-      "       ^~~~~~~~~~~~~~~\n",
-      "/tmp/tmpibddubrd.c:61:13: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]\n",
-      "             printf(\"%.2f\", e->p_atual);\n",
-      "             ^~~~~~\n",
-      "/tmp/tmpibddubrd.c:61:13: warning: incompatible implicit declaration of built-in function ‘printf’\n",
-      "/tmp/tmpibddubrd.c:61:13: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’\n",
-      "/tmp/tmpibddubrd.c:64:23: error: ‘NULL’ undeclared (first use in this function)\n",
-      "     }while(e->prox != NULL);\n",
-      "                       ^~~~\n",
-      "/tmp/tmpibddubrd.c: In function ‘main’:\n",
-      "/tmp/tmpibddubrd.c:70:16: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]\n",
-      "     p_emp e2 = criar_emprestimo\n",
-      "                ^~~~~~~~~~~~~~~~\n",
-      "/tmp/tmpibddubrd.c:72:5: error: expected ‘,’ or ‘;’ before ‘lista_emprestimos’\n",
-      "     lista_emprestimos = adicionar_emprestimo(e1);\n",
-      "     ^~~~~~~~~~~~~~~~~\n",
-      "/tmp/tmpibddubrd.c:73:25: error: too few arguments to function ‘adicionar_emprestimo’\n",
-      "     lista_emprestimos = adicionar_emprestimo(e2);\n",
-      "                         ^~~~~~~~~~~~~~~~~~~~\n",
-      "/tmp/tmpibddubrd.c:30:7: note: declared here\n",
-      " p_emp adicionar_emprestimo(p_emp lista_antiga, p_emp emp_novo)\n",
-      "       ^~~~~~~~~~~~~~~~~~~~\n",
-      "[C kernel] GCC exited with code 1, the executable will not be executed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#include <stdio.h>\n",
+    "#include <stdlib.h>\n",
+    "\n",
     "/**\n",
     " * Guarda o registro inteiro \n",
     " * */\n",
@@ -441,7 +334,7 @@
     "/**\n",
     " * Guarda o enedereço de um registro\n",
     " * */\n",
-    "typedef struct No *p_emp;\n",
+    "typedef struct Emprestimo *p_emp;\n",
     "\n",
     "/**\n",
     " * Na primeira lista, p_no aponta para NULL \n",
@@ -461,6 +354,7 @@
     "\n",
     "    if(lista_antiga != NULL){\n",
     "       emp_novo->prox = lista_antiga; //a lista antiga é o próximo nó \n",
+    "        return emp_novo;\n",
     "    }\n",
     "    return emp_novo;\n",
     "}\n",
@@ -469,37 +363,41 @@
     "    p_emp emp_novo = malloc(sizeof(Emprestimo));\n",
     "    emp_novo->i = 0;\n",
     "    emp_novo->n = n;\n",
-    "    emp->novo->s = s;\n",
+    "    emp_novo->s = s;\n",
     "    emp_novo->j = j;\n",
     "    emp_novo->p_atual = s;\n",
     "    emp_novo->prox = NULL;\n",
     "    return emp_novo;\n",
     "}\n",
     "\n",
-    "float proxima_parcela(Emprestimo e){\n",
+    "p_emp proxima_parcela(p_emp e){\n",
     " \n",
-    "\n",
-    "    e->p_atual = e->p_atual * (1 + e->j);\n",
+    "    if(e->i != 0){\n",
+    "            e->p_atual = e->p_atual * (1 + e->j);\n",
+    "    }\n",
+    "    e->i ++;\n",
     "    return e;\n",
     "}\n",
     "\n",
     "void calcular_parcelas(p_emp e){\n",
-    "    do{\n",
-    "        if(e->i =< e->n){\n",
-    "            e->p_atual = proxima_parcela(e);\n",
-    "            printf(\"%.2f\", e->p_atual);\n",
+    "    \n",
+    "    while(e != NULL){\n",
+    "        while(e->i <= e->n){\n",
+    "            e = proxima_parcela(e);\n",
+    "            printf(\"%.2f \", e->p_atual); \n",
     "        }\n",
-    "                \n",
-    "    }while(e->prox != NULL);\n",
+    "        e = e->prox;\n",
+    "    }       \n",
+    "        \n",
     "}\n",
     "\n",
     "int main(){\n",
     "    p_emp lista_emprestimos = criar_lista();\n",
     "    p_emp e1 = criar_emprestimo(5, 200, 0.01);\n",
-    "    p_emp e2 = criar_emprestimo\n",
+    "    p_emp e2 = criar_emprestimo(7, 500, 0.02);\n",
     "\n",
-    "    lista_emprestimos = adicionar_emprestimo(e1);\n",
-    "    lista_emprestimos = adicionar_emprestimo(e2);\n",
+    "    lista_emprestimos = adicionar_emprestimo(lista_emprestimos, e1);\n",
+    "    lista_emprestimos = adicionar_emprestimo(lista_emprestimos, e2);\n",
     "\n",
     "    calcular_parcelas(lista_emprestimos);\n",
     "\n",
