--- a/Lab02/notebook/lab02-java-estruturas.ipynb
+++ b/Lab02/notebook/lab02-java-estruturas.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "null"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr3894f838.Emprestimo"
+       "com.twosigma.beaker.javash.bkr1ac58f8d.Emprestimo"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "null"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,25 +191,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrf5222434.Binarios"
+       "com.twosigma.beaker.javash.bkr4aad2072.Binario"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import java.lang.*;\n",
-    "public class Binarios{\n",
+    "public class Binario{\n",
     "    \n",
-    "    public static String ConverterParaBinario(int numero)\n",
+    "    public static void ConverterParaBinario(int numero)\n",
     "    {\n",
     "        int quociente = numero;\n",
     "        String binario = null;\n",
@@ -218,7 +218,8 @@
     "        {\n",
     "            quociente = quociente/2;\n",
     "            int resto = quociente % 2;\n",
-    "            binario = binario + Integer.toString(resto);\n",
+    "            String novo_digito = \"\"+resto;\n",
+    "            binario = binario + novo_digito;\n",
     "            \n",
     "        }while(quociente != 1); //quando quiciente = 1 dividimos 2/2; logo, acabou \n",
     "    \n",
@@ -230,21 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "cannot find symbol",
-     "evalue": "cannot find symbol",
-     "output_type": "error",
-     "text": "cannot find symbol\n  symbol:   variable Binarios\n  location: class com.twosigma.beaker.javash.bkrf5222434.BeakerWrapperClass1261714175Id77f76ebf93964faaa5a71f505d275834\n Binarios.ConverterParaBinario(numero)\n ^       ^                              \n\n",
-     "traceback": [
-      "\u001b[1;31mcannot find symbol\u001b[0;0m",
-      "\u001b[1;31m  symbol:   variable Binarios\u001b[0;0m",
-      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkrf5222434.BeakerWrapperClass1261714175Id77f76ebf93964faaa5a71f505d275834\u001b[0;0m",
-      "\u001b[0;31m Binarios.ConverterParaBinario(numero)\u001b[0;0m",
-      "\u001b[0;31m ^       ^                              \u001b[0;0m"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "null000001011111\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -253,7 +258,7 @@
     "Random rand = new Random();\n",
     "int numero = rand.nextInt(9999);\n",
     "\n",
-    "Binarios.ConverterParaBinario(numero);\n"
+    "Binario.ConverterParaBinario(numero);\n"
    ]
   },
   {
@@ -277,14 +282,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr1ac58f8d.Genetica"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import java.lang.*;\n",
+    "public class Genetica{\n",
+    "    \n",
+    "    public static void Conversao_DNA_RNA(String DNA){\n",
+    "        \n",
+    "        int tam = DNA.length();\n",
+    "        String RNA = \"\";\n",
+    "        \n",
+    "        for(int i = 0; i < tam; i++){\n",
+    "            \n",
+    "            switch (DNA.charAt(i)) {\n",
+    "              case 'A' : RNA = RNA + \"U\"; break;\n",
+    "              case 'C' : RNA = RNA + \"G\"; break;\n",
+    "              case 'G' : RNA = RNA + \"C\"; break;\n",
+    "              case 'T' : RNA = RNA + \"A\"; break;\n",
+    "              default: System.out.println(\"invalido\");\n",
+    "            }\n",
+    "            \n",
+    "        }\n",
+    "       System.out.println(RNA); \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "UAAUGCGCGUUUG\n"
      ]
     },
     {
@@ -293,14 +339,16 @@
        "null"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "int quo = 5/2;\n",
-    "System.out.println(quo);"
+    "String DNA = \"ATTACGCGCAAAC\";\n",
+    "\n",
+    "Genetica.Conversao_DNA_RNA(DNA);\n",
+    "\n"
    ]
   },
   {
@@ -318,10 +366,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkr4aad2072.Salarios"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import java.util.Random;\n",
+    "\n",
+    "public class Salarios{\n",
+    " \n",
+    "    public static float[] gerar_salarios(int num_funcionarios)\n",
+    "    {\n",
+    "        \n",
+    "        float salarios[] = new float[num_funcionarios];\n",
+    "        for(int i = 0; i < num_funcionarios; i++){\n",
+    "            Random rand = new Random();\n",
+    "            salarios[i] = rand.nextInt(12500) + 2500;\n",
+    "        }\n",
+    "        return salarios; \n",
+    "    }\n",
+    "    \n",
+    "    public static float media_salarial(float[] salarios, int num_funcionarios)\n",
+    "    {\n",
+    "        int somatorio = 0;\n",
+    "        for(int i = 0; i < num_funcionarios; i++){\n",
+    "            somatorio += salarios[i];\n",
+    "        }\n",
+    "        return somatorio/num_funcionarios;\n",
+    "    }\n",
+    "\n",
+    "    public static void salarios_acima_media(float[] salarios, int num_funcionarios, float media)\n",
+    "    {\n",
+    "        \n",
+    "        int total = 0;\n",
+    "        for(int i = 0; i < num_funcionarios; i++){\n",
+    "            if (salarios[i] > media)\n",
+    "                total += 1;          \n",
+    "        }\n",
+    "        System.out.println(total + \" funcionários ganham um salário superior à média \" + media);\n",
+    "    }\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 funcionários ganham um salário superior à média 9003.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int num_funcionarios = 50;\n",
+    "\n",
+    "float salarios[] = Salarios.gerar_salarios(num_funcionarios);\n",
+    "\n",
+    "float media = Salarios.media_salarial(salarios, num_funcionarios);\n",
+    "\n",
+    "Salarios.salarios_acima_media(salarios, num_funcionarios, media);"
+   ]
   }
  ],
  "metadata": {
